--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
       </p>
     </header>
 
-    <form action="friends.html" method="get" id="login-form">
+    <form action="friends.html" method="get" class="login-form">
       <input
+        class="login-form__input"
         required
         name="username"
         type="text"
         placeholder="Email or Phone number"
       />
-      <input required name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
+      <input
+        class="login-form__input"
+        required
+        name="password"
+        type="password"
+        placeholder="Password"
+      />
+      <input class="login-form__submit" type="submit" value="Log In" />
 
-      <a href="#">Find Kokoa Account or Password</a>
+      <a class="login-form__a" href="#">Find Kokoa Account or Password</a>
     </form>
 
     <script
