nav page add /w css

--- a/friends.html
+++ b/friends.html
@@ -3,9 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Friends - KoKoa Clone</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div>friends</div>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>16:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>11%</span>
+        <i class="fas fa-battery-quarter"></i>
+      </div>
+    </div>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav_btn">
+          <a class="nav_link" href="#"><i class="fas fa-user fa-2x"></i></a>
+        </li>
+        <li class="nav_btn">
+          <a class="nav_link" href="#"><i class="far fa-comment fa-2x"></i></a>
+        </li>
+        <li class="nav_btn">
+          <a class="nav_link" href="#"><i class="fas fa-search fa-2x"></i></a>
+        </li>
+        <li class="nav_btn">
+          <a class="nav_link" href="#"
+            ><i class="fas fa-ellipsis-h fa-2x"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+
+    <script
+      src="https://kit.fontawesome.com/edfa1ccb41.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
