--- a/friends.html
+++ b/friends.html
@@ -21,13 +21,31 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav_btn">
           <a class="nav_link" href="#"><i class="fas fa-user fa-2x"></i></a>
         </li>
         <li class="nav_btn">
-          <a class="nav_link" href="#"><i class="far fa-comment fa-2x"></i></a>
+          <a class="nav_link" href="#">
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i
+          ></a>
         </li>
         <li class="nav_btn">
           <a class="nav_link" href="#"><i class="fas fa-search fa-2x"></i></a>
