friends user component add /w css

--- a/friends.html
+++ b/friends.html
@@ -36,23 +36,62 @@
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="http://cfile204.uf.daum.net/image/126AFA41502B2FAF26A01B"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">SJ Kim</h4>
+            <!-- <h6 class="user-component__subtitle"></h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>channel</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://img1.daumcdn.net/thumb/R720x0/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fliveboard%2Fbloter%2F74b9579a3b584e06ad39cc706d25daee.jpg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav_btn">
-          <a class="nav_link" href="#"><i class="fas fa-user fa-2x"></i></a>
+          <a class="nav_link" href="#"><i class="fas fa-user fa-lg"></i></a>
         </li>
         <li class="nav_btn">
           <a class="nav_link" href="#">
             <span class="nav__notification">1</span>
-            <i class="far fa-comment fa-2x"></i
+            <i class="far fa-comment fa-lg"></i
           ></a>
         </li>
         <li class="nav_btn">
-          <a class="nav_link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav_link" href="#"><i class="fas fa-search fa-lg"></i></a>
         </li>
         <li class="nav_btn">
           <a class="nav_link" href="#"
-            ><i class="fas fa-ellipsis-h fa-2x"></i
+            ><i class="fas fa-ellipsis-h fa-lg"></i
           ></a>
         </li>
       </ul>
