--- a/chats.html
+++ b/chats.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - KoKoa Clone</title>
+    <title>Chats - KoKoa Clone</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -22,57 +22,32 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i>
-      Friends' Names Display
-      <i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="friends-screen">
+    <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="http://cfile204.uf.daum.net/image/126AFA41502B2FAF26A01B"
-            class="user-component__avatar user-component__avatar--xl"
+            src="https://t1.daumcdn.net/cfile/tistory/2368144B56FFF8620A"
+            class="user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">SJ Kim</h4>
-            <!-- <h6 class="user-component__subtitle"></h6> -->
+            <h4 class="user-component__title">KaKaoTalk</h4>
+            <h6 class="user-component__subtitle">
+              Please check My Kakao Account Info
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://img1.daumcdn.net/thumb/R720x0/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fliveboard%2Fbloter%2F74b9579a3b584e06ad39cc706d25daee.jpg"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
-            </div>
-          </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
         </div>
       </div>
     </main>
@@ -81,13 +56,13 @@
       <ul class="nav__list">
         <li class="nav_btn">
           <a class="nav_link" href="friends.html"
-            ><i class="fas fa-user fa-lg"></i
+            ><i class="far fa-user fa-lg"></i
           ></a>
         </li>
         <li class="nav_btn">
           <a class="nav_link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="far fa-comment fa-lg"></i
+            <i class="fas fa-comment fa-lg"></i
           ></a>
         </li>
         <li class="nav_btn">
