--- a/find.html
+++ b/find.html
@@ -25,7 +25,10 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+        <div class="cog_notification"></div>
       </div>
     </header>
 
@@ -115,30 +118,32 @@
 
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav_btn">
+        <li class="nav__btn">
           <a class="nav_link" href="friends.html"
             ><i class="far fa-user fa-lg"></i
           ></a>
         </li>
-        <li class="nav_btn">
+        <li class="nav__btn">
           <a class="nav_link" href="chats.html">
             <span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-lg"></i
           ></a>
         </li>
-        <li class="nav_btn">
+        <li class="nav__btn">
           <a class="nav_link" href="find.html"
             ><i class="fas fa-search fa-lg"></i
           ></a>
         </li>
-        <li class="nav_btn">
+        <li class="nav__btn">
           <a class="nav_link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-lg"></i
           ></a>
         </li>
       </ul>
     </nav>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/edfa1ccb41.js"
       crossorigin="anonymous"
