--- a/friends.html
+++ b/friends.html
@@ -26,7 +26,10 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+        <div class="cog_notification"></div>
       </div>
     </header>
 
@@ -101,7 +104,12 @@
         </li>
       </ul>
     </nav>
-
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/edfa1ccb41.js"
       crossorigin="anonymous"
