--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
     <form action="friends.html" method="get" class="login-form">
       <input
         class="login-form__input"
-        required
         name="username"
         type="text"
         placeholder="Email or Phone number"
       />
       <input
         class="login-form__input"
-        required
         name="password"
         type="password"
         placeholder="Password"
@@ -47,7 +45,9 @@
 
       <a class="login-form__a" href="#">Find Kokoa Account or Password</a>
     </form>
-
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/edfa1ccb41.js"
       crossorigin="anonymous"
